--- a/sysadmin/includes/style.css
+++ b/sysadmin/includes/style.css
@@ -1,3 +1,8 @@
-.container.fluid{
-    height: 100vh;
+.content {
+    margin-left: 250px; /* Adjust this to match the sidebar width */
+    padding: 20px;
+}
+
+.card {
+    margin-bottom: 20px;
 }
